--- a/serp_schedule.ipynb
+++ b/serp_schedule.ipynb
@@ -518,8 +518,8 @@
     }
    ],
    "source": [
-    "cse_id = \"02b030ad62e8631d1\" # Custom Search Engine ID\n",
-    "api_key = \"AIzaSyDirWxSmLFwksHxtwcQp1UQB-5ux-u4ipg\" # API Key for Custom Search API of Google\n",
+    "cse_id = \"\" # Custom Search Engine ID\n",
+    "api_key = \"\" # API Key for Custom Search API of Google\n",
     "\n",
     "\n",
     "\"\"\"\n",
